# discord-reading-list-bot

./: .dockerignore  Dockerfile  bot.py  pyproject.toml
src/: github_client.py  reader.py  summarizer.py
